# Aegis-Sentinel

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  scheduled_runner.py  sync_to_github.ps1  test_channel.py  test_env.py
.github/workflows/: hourly-update.yml
.streamlit/: config.toml
src/: graph_engine.py  state.py  test_agents.py  test_graph.py  test_memory.py  watchlist.py
src/agents/: nodes.py
src/delivery/: transmission.py
src/memory/: vector_store.py
src/reconnaissance/: market_data.py  search.py
src/utils/: logger.py
