[project]
name = "aegis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.7",
    "ddgs>=9.13.0",
    "diskcache>=5.6.3",
    "fpdf2>=2.8.7",
    "groq>=0.37.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.0",
    "streamlit>=1.56.0",
    "tenacity>=9.1.4",
    "yfinance>=1.2.1",
]
